--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
+asn1crypto==0.24.0
 bcrypt==3.1.4
 cffi==1.11.4
 click==6.7
 coverage==4.2
+cryptography==2.1.4
+ecdsa==0.13
+Fabric==1.12.0
+Fabric3==1.13.1.post1
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 nose==1.3.7
+paramiko==2.4.0
+pyasn1==0.4.2
 pycparser==2.18
+pycrypto==2.6.1
+PyNaCl==1.2.1
 six==1.11.0
 SQLAlchemy==1.2.0
 Werkzeug==0.14.1
